# teensylcd-simulator

./: .gitignore  CMakeLists.txt  Makefile  Makefile.base  Makefile.library  Makefile.program  build-web.sh  build.sh  premake4.lua
CMakeModules/: .Emscripten.cmake.swp  FindELF.cmake
libteensylcd/: .gitignore  CMakeLists.txt  Makefile  buttons.c  buttons.h  pcd8544.c  pcd8544.h  premake4.lua  teensylcd.c  teensylcd.h  timer.c  timer.h
simavr/: CMakeLists.txt  Makefile
simavr/simavr/: Makefile  sim_core_config.h  sim_core_decl.h
simavr/simavr/cores/: sim_core_declare.h  sim_mega32u4.c
simavr/simavr/sim/: avr_clkpr.c  avr_clkpr.h  avr_ioport.c  avr_timer.c  avr_timer.h  sim_avr.c  sim_avr.h  sim_elf.c  sim_interrupts.c  sim_tracer.h
teensylcd-run/: .gitignore  CMakeLists.txt  Makefile  teensylcd-run.c
teensylcd-web/: CMakeLists.txt  start.hex  teensylcd-web.c  teensylcd-web.html
teensylcd-web/html/: teensylcd-newboard-web.html  teensylcd-web.html
teensylcd_run/: Makefile  premake4.lua  teensylcd_run.c
teensylcd_web/: .gitignore  build_command.txt  teensylcd.html  teensylcd_web.c
